<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>PVP Arena Modules</name>
    <groupId>net.slipcor.pvpa</groupId>
    <artifactId>modules</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spigot-api.version>1.16.5-R0.1-SNAPSHOT</spigot-api.version>
    </properties>
    <url>https://github.com/Eredrim/pvparena</url>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>eredrim-repo</id>
            <url>https://repo.eredrim.fr/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.spigotmc</groupId>
                <artifactId>spigot-api</artifactId>
                <version>${spigot-api.version}</version>
                <type>jar</type>
                <scope>provided</scope>
                <exclusions>
                    <exclusion>
                        <groupId>net.md-5</groupId>
                        <artifactId>bungeecord-chat</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>net.slipcor</groupId>
                <artifactId>pvparena</artifactId>
                <version>2.0.0-SNAPSHOT</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>20.1.0</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>m_AfterMatch</module>
        <module>m_Announcements</module>
        <module>m_ArenaMaps</module>
        <module>m_BanKick</module>
        <module>m_SpawnCollections</module>
        <module>m_BetterClasses</module>
        <module>m_BetterFight</module>
        <module>m_BetterGears</module>
        <module>m_BetterKillstreaks</module>
        <module>m_BlockDissolve</module>
        <module>m_BlockRestore</module>
        <module>m_ChestFiller</module>
        <module>m_EventActions</module>
        <module>m_FlySpectate</module>
        <module>m_Handycap</module>
        <module>m_ItemSpawners</module>
        <module>m_LateLounge</module>
        <module>m_PlayerFinder</module>
        <module>m_Points</module>
        <module>m_PowerUps</module>
        <module>m_Projectiles</module>
        <module>m_RealSpectate</module>
        <module>m_RespawnRelay</module>
        <module>m_Spectate</module>
        <module>m_Squads</module>
<!--        <module>m_Skins</module> -->
        <module>m_StartFreeze</module>
        <module>m_TeamSizeRestrict</module>
        <module>m_TempPerms</module>
        <module>m_Titles</module>
        <module>m_Turrets</module>
        <module>m_Vault</module>
        <!-- require m_Vault module to compile -->
        <module>m_Duel</module>
        <module>m_Walls</module>
        <module>m_WorldEdit</module>
        <module>m_WorldGuard</module>
        <module>dist</module>
    </modules>

    <build>
        <defaultGoal>clean package install</defaultGoal>
        <finalName>pa_${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
